--- a/public/styles/profiles.css
+++ b/public/styles/profiles.css
@@ -41,3 +41,10 @@
   margin: 0.5rem 0;
 }
 
+#image-preview { 
+  width: 10rem;
+  height: 10rem;
+  border-radius: 5rem;
+  object-fit: cover;
+  display: none;
+}
